--- a/style/style.css
+++ b/style/style.css
@@ -48,7 +48,10 @@ border-radius: 5px;
    min-height: 116px;
 }
 
-.header__logo {}
+.header__logo {
+   position: relative;
+   z-index: 5;
+}
 
 .header__menu {}
 
@@ -92,6 +95,8 @@ position: relative;
    display: flex;
    justify-content: flex-end;
    align-items: center;
+   position: relative;
+   z-index: 5;
 }
 
 
@@ -150,4 +155,37 @@ position: relative;
    background: #000;
    height: 2px;
 }
+.menu__body{
+   position: fixed;
+   top: 0;
+   left: -100%;
+   width: 100%;
+   height: 100%;
+   background-color: #fff;
+   padding: 90px 15px 30px 15px;
+   transition: left 0.3s ease 0s;
+}
+
+ .menu__body:target{
+      left: 0;
+   }
+
+.menu__list{
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+}
+.menu__link{
+   font-size: 20px;
+}
+.menu__item:not(:last-child){
+   margin-bottom: 25px;
+}
+}
+
+@media(max-width:479.98px){
+   .header__logo{
+      flex: 0 0 40px;
+      overflow: hidden;
+   }
 }
